--- a/sass/base/typography/_headings.scss
+++ b/sass/base/typography/_headings.scss
@@ -7,7 +7,7 @@ h6 {
 	clear: both;
 	font-family: $wp-meliora__secondary-font;
 	font-weight: var(--heading-typography-variant);
-	margin: 0 0 1.25em;
+	margin: 1.25rem 0 1.25rem;
 }
 
 h1, .h1, h1 * {
