--- a/sass/base/typography/_copy.scss
+++ b/sass/base/typography/_copy.scss
@@ -24,20 +24,13 @@ i {
 blockquote {
 	margin-top: 1.25rem;
 	margin-bottom: 1.5rem;
-	border-left: 2px solid $wp-meliora__quaternary-color;
-	padding-left: 64px;
+	margin-left: 0;
+	border-left: 2px solid $wp-meliora__neutral-gray-color;
+	padding-left: 22px;
 	color: $wp-meliora__secondary-color;
-	font-weight: bold;
-	font-size: 19px;
-	line-height: 32px;
-	letter-spacing: 0.1em;
 
 	cite {
 		color: $wp-meliora__tertiary-color;
-		font-weight: 400;
-		font-size: 19px;
-		line-height: 32px;
-		letter-spacing: 0.1em;
 	}
 }
 
