--- a/sass/layouts/_no-sidebar.scss
+++ b/sass/layouts/_no-sidebar.scss
@@ -20,8 +20,10 @@ body.error404 {
 
 .error-404.not-found {
   text-align: center;
+  margin-top: 32px;
 
   @include media(laptop) {
+    margin-top: 0;
     max-width: 60%;
     margin-right: auto;
     margin-left: auto;
@@ -44,6 +46,7 @@ body.error404 {
   }
 
   .not-found__actions__link {
+    text-decoration: none;
 
     .dashicons {
       vertical-align: middle;
@@ -56,7 +59,7 @@ body.error404 {
   }
 
   .not-found__error {
-    font-size: 15rem;
+    font-size: 8rem;
     line-height: 1em;
     margin-bottom: 24px;
     color: $wp-meliora__neutral-white;
@@ -64,5 +67,9 @@ body.error404 {
     2px -2px 0 $wp-meliora__neutral-gray-color,
     -2px 2px 0 $wp-meliora__neutral-gray-color,
     2px 2px 0 $wp-meliora__neutral-gray-color;
+
+    @include media(laptop) {
+      font-size: 15rem;
+    }
   }
 }
