Make footer stick to bottom of the page

--- a/sass/layouts/_sidebar-content.scss
+++ b/sass/layouts/_sidebar-content.scss
@@ -45,6 +45,7 @@
   width: auto;
   flex-grow: 1;
   overflow: hidden; /* Resolves issue with <pre> elements forcing full width. */
+  min-height: calc(100vh - 341px);
 }
 
 .widget-area {
