--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -2,6 +2,7 @@
   background-color: $wp-meliora__neutral-gray-light-color;
   padding: 0;
   font-size: 0.75rem;
+  margin-top: auto;
 }
 
 .c-footer__top {
