--- a/sass/style.scss
+++ b/sass/style.scss
@@ -89,3 +89,8 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 # Blocks
 --------------------------------------------------------------*/
 @import "blocks/blocks";
+
+/*--------------------------------------------------------------
+# Objects
+--------------------------------------------------------------*/
+@import "objects/page";
