--- a/sass/layouts/_no-sidebar.scss
+++ b/sass/layouts/_no-sidebar.scss
@@ -10,6 +10,17 @@
       justify-content: flex-end;
     }
   }
+
+  .site-main {
+    --responsive--aligndefault-width: calc(#{$breakpoint_sm} - var(--responsive--spacing-horizontal) + 46px);
+    --responsive--alignwide-width: calc(#{$breakpoint_sm} - var(--responsive--spacing-horizontal) + 46px);
+    --responsive--alignright-margin: calc( 0.5 * (100vw - var(--responsive--aligndefault-width)));
+    --responsive--alignleft-margin: calc( 0.5 * (100vw - var(--responsive--aligndefault-width)));
+  }
+
+  .site-main__content {
+    width: 100%;
+  }
 }
 
 
