--- a/style.css
+++ b/style.css
@@ -548,7 +548,7 @@ h4,
 h5,
 h6 {
 	clear: both;
-	margin: 1.25rem 0 1.25rem;
+	margin: 0 0 1.25rem;
 }
 
 * {
@@ -945,6 +945,17 @@ textarea {
 	.site.no-sidebar .c-post__tags {
 		justify-content: flex-end;
 	}
+}
+
+.site.no-sidebar .site-main {
+	--responsive--aligndefault-width: calc(720px - var(--responsive--spacing-horizontal) + 46px);
+	--responsive--alignwide-width: calc(720px - var(--responsive--spacing-horizontal) + 46px);
+	--responsive--alignright-margin: calc( 0.5 * (100vw - var(--responsive--aligndefault-width)));
+	--responsive--alignleft-margin: calc( 0.5 * (100vw - var(--responsive--aligndefault-width)));
+}
+
+.site.no-sidebar .site-main__content {
+	width: 100%;
 }
 
 body.error404 {
