Add divider to search results page

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -10,6 +10,7 @@
 /* Posts and pages
 --------------------------------------------- */
 @import "content/post";
+@import "content/page";
 
 /* Comments
 --------------------------------------------- */
