--- a/sass/components/content/_page.scss
+++ b/sass/components/content/_page.scss
@@ -2,10 +2,11 @@
 
 }
 
-.c-page__header {
+.search.search-results {
 
-}
+  .page-title {
 
-.c-page__title {
-
+    padding-bottom: 5px;
+    border-bottom: 1px solid #DFDFDF;
+  }
 }
