Update hover styles

--- a/sass/components/comments/_comments.scss
+++ b/sass/components/comments/_comments.scss
@@ -361,7 +361,7 @@ ol.children:last-child {
     transition: $global-transition;
 
     &:hover {
-      background-color: $wp-meliora__quaternary-color;
+      background-color: #2B2B2B;
     }
   }
 }
