--- a/sass/external/_flickity.scss
+++ b/sass/external/_flickity.scss
@@ -86,6 +86,12 @@ https://flickity.metafizzy.co
     /* vertically center */
     transform: translateY(-50%);
     padding: 16px 5px;
+
+    &:hover {
+        .flickity-button-icon {
+            fill:#DFDFDF;
+        }
+    }
 }
 
 .flickity-prev-next-button.previous {
@@ -116,6 +122,7 @@ https://flickity.metafizzy.co
     top: 20%;
     width: 60%;
     height: 60%;
+    transition: $global-transition;
 }
 
 /* ---- page dots ---- */
