--- a/style.css
+++ b/style.css
@@ -1537,7 +1537,7 @@ body.error404 {
 }
 
 .c-post__title {
-	margin: 24px 0 0;
+	margin: 12px 0 0;
 }
 
 .c-post__title a {
@@ -1618,14 +1618,14 @@ body.error404 {
 }
 
 .c-post__meta--date-author {
-	margin: 30px 0 24px;
+	margin: 20px 0 16px;
 	font-size: 0.75em;
 	color: var(--quaternary-color);
 }
 
 @media only screen and (min-width: 1140px) {
 	.c-post__meta--date-author {
-		margin: 40px 0 48px;
+		margin: 16px 0 32px;
 	}
 }
 
@@ -2049,7 +2049,7 @@ ol.children {
 }
 
 .form-submit input:hover, .form-submit [type="submit"]:hover {
-	background-color: var(--quaternary-color);
+	background-color: #2B2B2B;
 }
 
 .no-comments {
@@ -2544,6 +2544,10 @@ https://flickity.metafizzy.co
 	padding: 16px 5px;
 }
 
+.flickity-prev-next-button:hover .flickity-button-icon {
+	fill: #DFDFDF;
+}
+
 .flickity-prev-next-button.previous {
 	left: -20px;
 }
@@ -2581,6 +2585,7 @@ https://flickity.metafizzy.co
 	top: 20%;
 	width: 60%;
 	height: 60%;
+	transition: 0.2s;
 }
 
 /* ---- page dots ---- */
