--- a/sass/layouts/_sidebar-content.scss
+++ b/sass/layouts/_sidebar-content.scss
@@ -1,8 +1,8 @@
 .site.is-sidebar-content {
-
   .site-main__container {
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
 
     @include media(laptop) {
       flex-wrap: nowrap;
