--- a/style-rtl.css
+++ b/style-rtl.css
@@ -853,6 +853,7 @@ textarea {
 .site.is-sidebar-content .site-main__container {
 	display: flex;
 	flex-wrap: wrap;
+	width: 100%;
 }
 
 @media only screen and (min-width: 1140px) {
@@ -1005,6 +1006,10 @@ body.error404 {
 	.error-404.not-found .not-found__error {
 		font-size: 15rem;
 	}
+}
+
+.site-main {
+	width: 100%;
 }
 
 /*--------------------------------------------------------------
@@ -2304,6 +2309,14 @@ ol.children {
 	color: var(--tertiary-color);
 	background-color: transparent;
 	border-color: var(--tertiary-color);
+}
+
+.rtl .pagination .nav-links .page-numbers.next, .rtl .pagination .nav-links .page-numbers.prev {
+	transform: rotateY(-180deg);
+}
+
+.site-main {
+	width: 100%;
 }
 
 /* Social Share
