Fix minor rtl issues and add edit button to customizer

--- a/style.css
+++ b/style.css
@@ -1641,6 +1641,7 @@ body.error404 {
 
 .c-post__thumbnail {
 	margin-bottom: 24px;
+	text-align: center;
 }
 
 @media only screen and (min-width: 1140px) {
@@ -2585,12 +2586,12 @@ https://flickity.metafizzy.co
 /* right to left */
 .flickity-rtl .flickity-prev-next-button.previous {
 	left: auto;
-	right: 10px;
+	right: -25px;
 }
 
 .flickity-rtl .flickity-prev-next-button.next {
 	right: auto;
-	left: 10px;
+	left: -25px;
 }
 
 .flickity-prev-next-button .flickity-button-icon {
