--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1625,6 +1625,7 @@ body.error404 {
 
 .c-post__thumbnail {
 	margin-bottom: 24px;
+	text-align: center;
 }
 
 @media only screen and (min-width: 1140px) {
@@ -2315,10 +2316,6 @@ ol.children {
 	transform: rotateY(-180deg);
 }
 
-.site-main {
-	width: 100%;
-}
-
 /* Social Share
 --------------------------------------------- */
 .c-social-share {
@@ -2573,12 +2570,12 @@ https://flickity.metafizzy.co
 /* right to left */
 .flickity-rtl .flickity-prev-next-button.previous {
 	right: auto;
-	left: 10px;
+	left: -25px;
 }
 
 .flickity-rtl .flickity-prev-next-button.next {
 	left: auto;
-	right: 10px;
+	right: -25px;
 }
 
 .flickity-prev-next-button .flickity-button-icon {
