--- a/style.css
+++ b/style.css
@@ -2247,20 +2247,18 @@ ol.children {
 	border-bottom: 1px solid #DFDFDF;
 }
 
-.s-categories-list li {
+.s-categories-list div {
 	margin-right: 24px;
-	display: inline-block;
-	width: auto;
 	margin-bottom: 0;
 }
 
 @media only screen and (min-width: 1140px) {
-	.s-categories-list li {
+	.s-categories-list div {
 		margin-right: 48px;
 	}
 }
 
-.s-categories-list li.current-cat a {
+.s-categories-list div.current-cat a {
 	color: var(--secondary-color);
 	border-bottom: 2px solid var(--quaternary-color);
 }
