--- a/style-rtl.css
+++ b/style-rtl.css
@@ -2231,20 +2231,18 @@ ol.children {
 	border-bottom: 1px solid #DFDFDF;
 }
 
-.s-categories-list li {
+.s-categories-list .c-categories-list__slide {
 	margin-left: 24px;
-	display: inline-block;
-	width: auto;
 	margin-bottom: 0;
 }
 
 @media only screen and (min-width: 1140px) {
-	.s-categories-list li {
+	.s-categories-list .c-categories-list__slide {
 		margin-left: 48px;
 	}
 }
 
-.s-categories-list li.current-cat a {
+.s-categories-list .c-categories-list__slide.current-cat a {
 	color: var(--secondary-color);
 	border-bottom: 2px solid var(--quaternary-color);
 }
