--- a/sass/external/_flickity.scss
+++ b/sass/external/_flickity.scss
@@ -3,163 +3,170 @@ https://flickity.metafizzy.co
 ---------------------------------------------- */
 
 .flickity-enabled {
-    position: relative;
+  position: relative;
 }
 
-.flickity-enabled:focus { outline: none; }
+.flickity-enabled:focus {
+  outline: none;
+}
 
 .flickity-viewport {
-    overflow: hidden;
-    position: relative;
-    height: 100%;
-    width: 100%;
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+  width: 100%;
 }
 
 .flickity-slider {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 /* draggable */
 
 .flickity-enabled.is-draggable {
-    -webkit-tap-highlight-color: transparent;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .flickity-enabled.is-draggable .flickity-viewport {
-    cursor: move;
-    cursor: -webkit-grab;
-    cursor: grab;
+  cursor: move;
+  cursor: -webkit-grab;
+  cursor: grab;
 }
 
 .flickity-enabled.is-draggable .flickity-viewport.is-pointer-down {
-    cursor: -webkit-grabbing;
-    cursor: grabbing;
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
 }
 
 /* ---- flickity-button ---- */
 
 .flickity-button {
-    position: absolute;
-    background: hsla(0, 0%, 100%, 0.75);
-    border: none;
-    color: #333;
+  position: absolute;
+  background: hsla(0, 0%, 100%, 0.75);
+  border: none;
+  color: #333;
 }
 
 .flickity-button:hover {
-    background: white;
-    cursor: pointer;
+  background: white;
+  cursor: pointer;
 }
 
 .flickity-button:focus {
-    outline: none;
-    box-shadow: 0 0 0 5px #19F;
+  outline: none;
+  box-shadow: 0 0 0 5px #19F;
 }
 
 .flickity-button:active {
-    opacity: 0.6;
+  opacity: 0.6;
 }
 
 .flickity-button:disabled {
-    opacity: 0.3;
-    cursor: auto;
-    /* prevent disabled button from capturing pointer up event. #716 */
-    pointer-events: none;
+  opacity: 0.3;
+  cursor: auto;
+  /* prevent disabled button from capturing pointer up event. #716 */
+  pointer-events: none;
 }
 
 .flickity-button-icon {
-    fill: currentColor;
+  fill: currentColor;
 }
 
 /* ---- previous/next buttons ---- */
 
 .flickity-prev-next-button {
-    top: 50%;
-    width: 18px;
-    height: 18px;
-    border-radius: 50%;
-    /* vertically center */
-    transform: translateY(-50%);
-    padding: 16px 5px;
+  top: 50%;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  /* vertically center */
+  transform: translateY(-50%);
+  padding: 16px 5px;
 
-    &:hover {
-        .flickity-button-icon {
-            fill:#DFDFDF;
-        }
+  &:hover {
+    .flickity-button-icon {
+      fill: #DFDFDF;
     }
+  }
 }
 
 .flickity-prev-next-button.previous {
-    left: -20px;
-    @include media(laptop) {
-        left: -25px;
-    }
+  left: -20px;
+  @include media(laptop) {
+    left: -25px;
+  }
 }
+
 .flickity-prev-next-button.next {
-    right: -20px;
-    @include media(laptop) {
-        right: -25px;
-    }
+  right: -20px;
+  @include media(laptop) {
+    right: -25px;
+  }
 }
+
 /* right to left */
 .flickity-rtl .flickity-prev-next-button.previous {
-    left: auto;
-    right: -25px;
+  left: auto;
+  right: -25px;
 }
+
 .flickity-rtl .flickity-prev-next-button.next {
-    right: auto;
-    left: -25px;
+  right: auto;
+  left: -25px;
 }
 
 .flickity-prev-next-button .flickity-button-icon {
-    position: absolute;
-    left: 20%;
-    top: 20%;
-    width: 60%;
-    height: 60%;
-    transition: $global-transition;
+  position: absolute;
+  left: 20%;
+  top: 20%;
+  width: 60%;
+  height: 60%;
+  transition: $global-transition;
 }
 
 /* ---- page dots ---- */
 
 .flickity-page-dots {
-    position: absolute;
-    width: 100%;
-    bottom: -25px;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    text-align: center;
-    line-height: 1;
+  position: absolute;
+  width: 100%;
+  bottom: -25px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+  line-height: 1;
 }
 
-.flickity-rtl .flickity-page-dots { direction: rtl; }
+.flickity-rtl .flickity-page-dots {
+  direction: rtl;
+}
 
 .flickity-page-dots .dot {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    margin: 0 8px;
-    background: #333;
-    border-radius: 50%;
-    opacity: 0.25;
-    cursor: pointer;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 0 8px;
+  background: #333;
+  border-radius: 50%;
+  opacity: 0.25;
+  cursor: pointer;
 }
 
 .flickity-page-dots .dot.is-selected {
-    opacity: 1;
+  opacity: 1;
 }
 
 
 // RTL Styles
 .rtl {
-    .flickity-prev-next-button {
-        transform-origin: center;
-        transform: rotate(-180deg) translateY(18px)
-    }
+  .flickity-prev-next-button {
+    transform-origin: center;
+    transform: rotate(-180deg) translateY(18px)
+  }
 }
