Add Thumbnail to archives and Branding to footer

--- a/sass/components/content/_post.scss
+++ b/sass/components/content/_post.scss
@@ -183,3 +183,12 @@
 .c-post__content__main a:hover {
   color: var(--secondary-color);
 }
+
+
+// Archive
+.c-post--archive {
+
+  .c-post__thumbnail {
+    margin-bottom: 24px;
+  }
+}
