--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -52,6 +52,10 @@
 .c-footer__copyright {
   padding: 0 15px;
   margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
 
   p {
     margin: 0;
@@ -60,6 +64,8 @@
   @include media(laptop) {
     margin-top: 0;
     padding: 0;
+    flex-direction: row;
+    align-items: center;
   }
 }
 
@@ -95,5 +101,19 @@
         color: $wp-meliora__primary-color;
       }
     }
+  }
+}
+
+.c-footer__branding {
+  margin-bottom: 32px;
+
+  @include media(tablet) {
+    margin-right: 42px;
+    margin-bottom: 0;
+  }
+
+  img {
+    height: 28px;
+    width: auto;
   }
 }
