Fix minor issues

--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -111,6 +111,12 @@
     margin-right: 42px;
     margin-bottom: 0;
   }
+}
+
+.s-footer-branding {
+  a {
+    text-decoration: none;
+  }
 
   img {
     height: 28px;
