--- a/sass/components/content/_post.scss
+++ b/sass/components/content/_post.scss
@@ -147,6 +147,7 @@
 .c-post__thumbnail {
   margin-bottom: 24px;
   text-align: center;
+  width: 100%;
 
   @include media(laptop) {
     margin-bottom: 48px;
