--- a/style.css
+++ b/style.css
@@ -1650,6 +1650,7 @@ body.error404 {
 .c-post__thumbnail {
 	margin-bottom: 24px;
 	text-align: center;
+	width: 100%;
 }
 
 @media only screen and (min-width: 1140px) {
