--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://vitathemes.com/theme/wp-meliora/
 Author: VitaThemes
 Author URI: https://vitathemes.com
 Description: A minimal & mobile-first blog theme. The best choice for people who want to start blogging as soon as possible.
-Version: 1.1.0
+Version: 1.1.1
 Tested up to: 5.6
 Requires PHP: 5.6
 License: GPL-2.0-or-later
@@ -23,9 +23,9 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	font-family: 'Roboto Mono';
 	font-style: normal;
 	font-weight: 300;
-	src: url("../fonts/roboto-mono-v12-latin-300.eot");
+	src: url("./fonts/roboto-mono-v12-latin-300.eot");
 	/* IE9 Compat Modes */
-	src: local(""), url("../fonts/roboto-mono-v12-latin-300.eot?#iefix") format("embedded-opentype"), url("../fonts/roboto-mono-v12-latin-300.woff2") format("woff2"), url("../fonts/roboto-mono-v12-latin-300.woff") format("woff"), url("../fonts/roboto-mono-v12-latin-300.ttf") format("truetype"), url("../fonts/roboto-mono-v12-latin-300.svg#RobotoMono") format("svg");
+	src: local(""), url("./fonts/roboto-mono-v12-latin-300.eot?#iefix") format("embedded-opentype"), url("./fonts/roboto-mono-v12-latin-300.woff2") format("woff2"), url("./fonts/roboto-mono-v12-latin-300.woff") format("woff"), url("./fonts/roboto-mono-v12-latin-300.ttf") format("truetype"), url("./fonts/roboto-mono-v12-latin-300.svg#RobotoMono") format("svg");
 	/* Legacy iOS */
 }
 
@@ -34,9 +34,9 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	font-family: 'Roboto Mono';
 	font-style: normal;
 	font-weight: 400;
-	src: url("../fonts/roboto-mono-v12-latin-regular.eot");
+	src: url("./fonts/roboto-mono-v12-latin-regular.eot");
 	/* IE9 Compat Modes */
-	src: local(""), url("../fonts/roboto-mono-v12-latin-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/roboto-mono-v12-latin-regular.woff2") format("woff2"), url("../fonts/roboto-mono-v12-latin-regular.woff") format("woff"), url("../fonts/roboto-mono-v12-latin-regular.ttf") format("truetype"), url("../fonts/roboto-mono-v12-latin-regular.svg#RobotoMono") format("svg");
+	src: local(""), url("./fonts/roboto-mono-v12-latin-regular.eot?#iefix") format("embedded-opentype"), url("./fonts/roboto-mono-v12-latin-regular.woff2") format("woff2"), url("./fonts/roboto-mono-v12-latin-regular.woff") format("woff"), url("./fonts/roboto-mono-v12-latin-regular.ttf") format("truetype"), url("./fonts/roboto-mono-v12-latin-regular.svg#RobotoMono") format("svg");
 	/* Legacy iOS */
 }
 
@@ -560,7 +560,7 @@ input,
 select,
 optgroup,
 textarea {
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 h1,
@@ -640,11 +640,11 @@ blockquote {
 	margin-left: 0;
 	border-left: 2px solid #DFDFDF;
 	padding-left: 22px;
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 blockquote cite {
-	color: var(--heading-color);
+	color: var(--wp-meliora-heading-color);
 }
 
 address {
@@ -659,7 +659,7 @@ pre {
 	max-width: 100%;
 	overflow: auto;
 	padding: 1.6em;
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 abbr,
@@ -754,16 +754,16 @@ table {
 /* Links
 --------------------------------------------- */
 a {
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 	transition: 0.2s;
 }
 
 a:visited {
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 a:hover, a:focus, a:active {
-	color: var(--primary-color);
+	color: var(--wp-meliora-primary-color);
 }
 
 a:focus {
@@ -794,7 +794,7 @@ button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
-	background-color: var(--base-font-color);
+	background-color: var(--wp-meliora-base-font-color);
 }
 
 input[type="text"],
@@ -1232,7 +1232,7 @@ body.error404 {
 
 .c-header__navigation__toggle {
 	background-color: transparent;
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 	padding: 0;
 	position: relative;
 	z-index: 10;
@@ -1250,25 +1250,25 @@ body.error404 {
 
 .c-header__branding__title {
 	margin: 0;
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 .c-header__branding__title:hover {
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 .c-header__branding__title__link {
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 	text-decoration: none;
 	font-weight: var(--heading-typography-variant);
 }
 
 .c-header__branding__title__link:visited, .c-header__branding__title__link:focus, .c-header__branding__title__link:active {
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 .c-header__branding__title__link:hover {
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 @media only screen and (min-width: 1140px) {
@@ -1317,7 +1317,7 @@ body.error404 {
 
 @media only screen and (min-width: 980px) {
 	.main-navigation ul ul {
-		border: 1px solid var(--base-font-color);
+		border: 1px solid var(--wp-meliora-base-font-color);
 		float: left;
 		position: absolute;
 		top: 100%;
@@ -1374,7 +1374,7 @@ body.error404 {
 }
 
 .main-navigation ul ul a {
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 	padding: 10px 20px;
 	text-align: center;
 	white-space: nowrap;
@@ -1401,13 +1401,13 @@ body.error404 {
 	transition: 0.2s;
 	display: block;
 	text-decoration: none;
-	color: var(--heading-color);
+	color: var(--wp-meliora-heading-color);
 	padding: 10px 0;
 }
 
 @media only screen and (min-width: 980px) {
 	.main-navigation a {
-		color: var(--base-font-color);
+		color: var(--wp-meliora-base-font-color);
 	}
 }
 
@@ -1421,7 +1421,7 @@ body.error404 {
 	.main-navigation .current_page_ancestor > a,
 	.main-navigation .current-menu-ancestor > a {
 		color: #474747;
-		border-bottom: 2px solid var(--base-font-color);
+		border-bottom: 2px solid var(--wp-meliora-base-font-color);
 	}
 }
 
@@ -1432,7 +1432,7 @@ body.error404 {
 }
 
 .main-navigation > ul > li.menu-item-has-children span {
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 	transition: 0.2s;
 	margin-left: 8px;
 	transform-origin: center center;
@@ -1461,7 +1461,7 @@ body.error404 {
 .main-navigation > ul ul li.menu-item-has-children span {
 	transform-origin: center center;
 	transform: rotate(0deg);
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 @media only screen and (min-width: 980px) {
@@ -1683,28 +1683,28 @@ body.error404 {
 
 .c-post_cats {
 	font-size: 0.75em;
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 .s-post-meta {
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 	font-size: 0.75rem;
 }
 
 .s-post-meta a {
 	text-decoration: none;
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 	font-weight: var(--heading-typography-variant);
 }
 
 .s-post-meta a:hover {
-	color: var(--primary-color);
+	color: var(--wp-meliora-primary-color);
 }
 
 .c-post__meta--date-author {
 	margin: 20px 0 16px;
 	font-size: 0.75em;
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 @media only screen and (min-width: 1140px) {
@@ -1753,15 +1753,15 @@ body.error404 {
 }
 
 .c-post__content__main a {
-	color: var(--link-normal-color);
+	color: var(--wp-meliora-link-normal-color);
 }
 
 .c-post__content__main a:visited {
-	color: var(--link-normal-color);
+	color: var(--wp-meliora-link-normal-color);
 }
 
 .c-post__content__main a:hover, .c-post__content__main a:focus, .c-post__content__main a:active {
-	color: var(--link-hover-color);
+	color: var(--wp-meliora-link-hover-color);
 }
 
 .c-post--archive .c-post__thumbnail {
@@ -1818,7 +1818,7 @@ body.error404 {
 
 .comment-content a {
 	word-wrap: break-word;
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 	font-weight: 400;
 	font-size: 19px;
 	line-height: 23px;
@@ -1878,7 +1878,7 @@ body.error404 {
 
 .comment .comment-header .time, .comment .comment-header .time * {
 	font-size: 12px;
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 	font-weight: var(--heading-typography-variant) !important;
 }
 
@@ -1923,7 +1923,7 @@ body.error404 {
 	font-size: 0.8em;
 	margin-top: 0;
 	text-decoration: none;
-	color: var(--heading-color);
+	color: var(--wp-meliora-heading-color);
 }
 
 @media only screen and (min-width: 1140px) {
@@ -1995,13 +1995,13 @@ ol.children {
 	line-height: 27px;
 	text-align: center;
 	letter-spacing: 0.1em;
-	color: var(--base-font-color) !important;
+	color: var(--wp-meliora-base-font-color) !important;
 	transition: 0.25s;
 	text-decoration: none;
 }
 
 .comment-reply-link:hover {
-	color: var(--primary-color);
+	color: var(--wp-meliora-primary-color);
 }
 
 .comment-form {
@@ -2029,7 +2029,7 @@ ol.children {
 	align-items: center;
 	margin-bottom: 0.5em;
 	font-weight: var(--heading-typography-variant);
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 .comment-form-author input, .comment-form-email input, .comment-form-url input {
@@ -2058,7 +2058,7 @@ ol.children {
 	font-size: 1rem;
 	line-height: 24px;
 	font-weight: var(--heading-typography-variant);
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 .comment-form-comment label {
@@ -2069,7 +2069,7 @@ ol.children {
 	align-items: center;
 	margin-bottom: 0.5em;
 	font-weight: var(--heading-typography-variant);
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 @media only screen and (min-width: 1140px) {
@@ -2100,7 +2100,7 @@ ol.children {
 	align-items: center;
 	margin-bottom: 0.5em;
 	font-weight: var(--heading-typography-variant);
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 #cancel-comment-reply-link {
@@ -2113,7 +2113,7 @@ ol.children {
 	font-size: 0.8em;
 	margin-top: 0;
 	text-decoration: none;
-	color: var(--base-font-color) !important;
+	color: var(--wp-meliora-base-font-color) !important;
 }
 
 @media only screen and (min-width: 1140px) {
@@ -2123,7 +2123,7 @@ ol.children {
 }
 
 .comment-edit-link:hover {
-	color: var(--primary-color);
+	color: var(--wp-meliora-primary-color);
 }
 
 .comment-reply-title {
@@ -2301,7 +2301,7 @@ ol.children {
 .c-search-form__submit {
 	width: 40px;
 	height: 40px;
-	background-color: var(--primary-color);
+	background-color: var(--wp-meliora-primary-color);
 	padding: 0;
 	display: flex;
 	align-items: center;
@@ -2360,22 +2360,22 @@ ol.children {
 }
 
 .s-categories-list .c-categories-list__slide.current-cat a {
-	color: var(--base-font-color);
-	border-bottom: 2px solid var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
+	border-bottom: 2px solid var(--wp-meliora-base-font-color);
 }
 
 .s-categories-list a {
 	font-weight: var(--heading-typography-variant);
 	text-decoration: none;
 	padding: 0 4px 8px;
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 	word-wrap: normal;
 	white-space: nowrap;
 	display: block;
 }
 
 .s-categories-list a:hover {
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 /* Categories List
@@ -2386,7 +2386,7 @@ ol.children {
 }
 
 .pagination .nav-links .page-numbers {
-	color: var(--heading-color);
+	color: var(--wp-meliora-heading-color);
 	font-weight: normal;
 	font-size: 16px;
 	line-height: 32px;
@@ -2396,11 +2396,11 @@ ol.children {
 }
 
 .pagination .nav-links .page-numbers:hover {
-	color: var(--primary-color);
+	color: var(--wp-meliora-primary-color);
 }
 
 .pagination .nav-links .page-numbers.current {
-	color: var(--primary-color);
+	color: var(--wp-meliora-primary-color);
 }
 
 .pagination .nav-links .page-numbers.next, .pagination .nav-links .page-numbers.prev {
@@ -2410,7 +2410,7 @@ ol.children {
 	align-items: center;
 	justify-content: center;
 	border: 1px solid #F4F4F4;
-	color: var(--heading-color);
+	color: var(--wp-meliora-heading-color);
 	border-radius: 3px;
 	background-color: #F4F4F4;
 }
@@ -2422,9 +2422,9 @@ ol.children {
 }
 
 .pagination .nav-links .page-numbers.next:hover, .pagination .nav-links .page-numbers.prev:hover {
-	color: var(--heading-color);
+	color: var(--wp-meliora-heading-color);
 	background-color: transparent;
-	border-color: var(--heading-color);
+	border-color: var(--wp-meliora-heading-color);
 }
 
 .rtl .pagination .nav-links .page-numbers.next, .rtl .pagination .nav-links .page-numbers.prev {
@@ -2453,11 +2453,11 @@ ol.children {
 }
 
 .c-social-share__link:hover .c-social-share__link__icon {
-	color: var(--primary-color);
+	color: var(--wp-meliora-primary-color);
 }
 
 .c-social-share__link__icon {
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 }
 
 .c-social-share__title {
@@ -2561,7 +2561,7 @@ ol.children {
 
 .s-footer-socials a {
 	text-decoration: none;
-	color: var(--base-font-color);
+	color: var(--wp-meliora-base-font-color);
 	margin-right: 24px;
 }
 
@@ -2570,7 +2570,7 @@ ol.children {
 }
 
 .s-footer-socials a:hover span {
-	color: var(--primary-color);
+	color: var(--wp-meliora-primary-color);
 }
 
 .c-footer__branding {
