--- a/sass/abstracts/variables/_fonts.scss
+++ b/sass/abstracts/variables/_fonts.scss
@@ -3,13 +3,13 @@
   font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 300;
-  src: url('../fonts/roboto-mono-v12-latin-300.eot'); /* IE9 Compat Modes */
+  src: url('./fonts/roboto-mono-v12-latin-300.eot'); /* IE9 Compat Modes */
   src: local(''),
-  url('../fonts/roboto-mono-v12-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/roboto-mono-v12-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/roboto-mono-v12-latin-300.woff') format('woff'), /* Modern Browsers */
-  url('../fonts/roboto-mono-v12-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/roboto-mono-v12-latin-300.svg#RobotoMono') format('svg'); /* Legacy iOS */
+  url('./fonts/roboto-mono-v12-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('./fonts/roboto-mono-v12-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+  url('./fonts/roboto-mono-v12-latin-300.woff') format('woff'), /* Modern Browsers */
+  url('./fonts/roboto-mono-v12-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('./fonts/roboto-mono-v12-latin-300.svg#RobotoMono') format('svg'); /* Legacy iOS */
 }
 
 /* roboto-mono-regular - latin */
@@ -17,11 +17,11 @@
   font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/roboto-mono-v12-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('./fonts/roboto-mono-v12-latin-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
-  url('../fonts/roboto-mono-v12-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/roboto-mono-v12-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/roboto-mono-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
-  url('../fonts/roboto-mono-v12-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/roboto-mono-v12-latin-regular.svg#RobotoMono') format('svg'); /* Legacy iOS */
+  url('./fonts/roboto-mono-v12-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('./fonts/roboto-mono-v12-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('./fonts/roboto-mono-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('./fonts/roboto-mono-v12-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('./fonts/roboto-mono-v12-latin-regular.svg#RobotoMono') format('svg'); /* Legacy iOS */
 }
